# cdk-rust-full-stack-app

./: .eslintrc.json  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
app/: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  api.yaml  buildspec-fe.yml  buildspec.yml  rustfmt.toml
app/crates/app/: Cargo.toml
app/crates/app/src/: auth.rs  main.rs
app/crates/auth0-spa-rust/: .gitignore  Cargo.toml
app/crates/auth0-spa-rust/src/: lib.rs  model.rs
app/crates/db_impl/: Cargo.toml  Dockerfile  Makefile  diesel.toml  template.yml
app/crates/db_impl/db-sync/: Cargo.toml
app/crates/db_impl/db-sync/src/: main.rs
app/crates/db_impl/db_common/: Cargo.toml
app/crates/db_impl/db_common/src/: lib.rs
app/crates/db_impl/migrations/2022-04-18-075942_weighing/: down.sql  up.sql
app/crates/db_impl/migrations/2022-08-18-044942_test_table/: up.sql
app/crates/db_impl/src/: lib.rs  pagination.rs  schema.rs
app/crates/ui-app/: Cargo.toml  Trunk.toml  index.html  styles.css
app/crates/ui-app/src/: app.rs  main.rs
app/crates/ui-app/src/auth/: auth0_service.rs  auth_context.rs  mod.rs  session_logic.rs
app/crates/ui-app/src/components/: auth_info.rs  footer.rs  mod.rs  nav.rs
app/crates/ui-app/src/routes/: about.rs  home.rs  mod.rs  pair_results_page.rs  pair_voting_page.rs  profile.rs
app/dev-tools/code-deploy/vendenic-server/: Dockerfile
dummy-app/: README.md
lib/: pipeline-stack.ts
lib/stages/deploy/: deploy-stage.ts  full-stack-arch-stack.ts
lib/stages/deploy/backend/: eb-stack.ts  elastic-beanstalk-deploy-action.ts  rds-stack.ts
lib/stages/deploy/frontend/: cloudfront-stack.ts  hosted-zone-stack.ts
