[package]
name = "server-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi_client = { path = "../codegen/server" }
db_impl = { path = "../db_impl" }
db_common = { path = "../db_impl/db_common" }
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
hyper = {version = "0.14", features = ["full"]}
async-trait = "0.1.24"
tokio = { version = "1.14", features = ["full"] }
futures = "0.3"
alcoholic_jwt = { git = "https://github.com/Saruniks/alcoholic_jwt.git", branch = "audience" }
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
aws-config = "0.51.0"
aws-sdk-ssm = "0.21.0"
aws-sdk-secretsmanager = "0.21.0"
bb8 = "0.7.0"
bb8-diesel = "0.2.1"
diesel = { version = "1.4.8", default-features = false, features = [ "r2d2", "postgres" ] }
serde_json = "1.0"
dotenv = "0.15.0"
