[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2018"
license = "Apache-2.0/MIT"
name = "yew-app"
readme = "./README.md"
repository = "https://github.com/jetli/create-yew-app.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
once_cell = "1.7.2"
yew = "0.19.3"
yew-router = "0.16.0"
web-sys = { version = "=0.3.50", features = [
    "console"
] }
wasm-bindgen = { version="=0.2.74", features = ["serde-serialize"] }
wasm-bindgen-futures = "=0.4.24"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
js-sys = "0.3.51"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
openapi = { path = "../codegen/api-client" }
reqwest = "=0.11.3"
material-yew = { version = "0.2.0", features = ["full"] }
auth0-spa-rust = { path = "../auth0-spa-rust" }
image = "=0.24.1"
base64 = "0.13.0"
gloo-timers = "0.2.2"

[dev-dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Window",
  "Location",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "ImageBitmap",
]
