[package]
name = "db_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-ssm = "0.21.0"
aws-sdk-secretsmanager = "0.21.0"
diesel = { version = "1.4.8", default-features = false, features = [ "r2d2", "postgres" ] }
dotenv = "0.15.0"
anyhow = "1.0.42"
bytes = "1.1.0"
async-trait = "0.1.24"
base64 = "0.13.0"
tokio = { version = "1.17.0", features = ["macros"] }
serde_json = "1.0"
 